added my first 2 files into a repo!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Personal info</h1>
         <p>Name: Ezzeldin Husen</p>
         <p>Age: 22</p>
-        <p>University: Modern Academy</p>
+        <p>University: Modern Academ</p>
         <p>Specification: Computer Engineering</p>
         <!-- Image tag -->
         <img src="pfp.png" width="200" />
